퀴즈,태그 기능 구현, 구조수정