@@ -3,13 +3,27 @@ package com.kdt.yts.YouSumback.service;
 import com.kdt.yts.YouSumback.model.dto.request.QuizRequest;
 import com.kdt.yts.YouSumback.model.dto.request.SummaryRequest;
 import com.kdt.yts.YouSumback.model.dto.response.SummaryResponse;
-import com.kdt.yts.YouSumback.model.entity.*;
-import com.kdt.yts.YouSumback.repository.*;
+import com.kdt.yts.YouSumback.model.entity.AnswerOption;
+import com.kdt.yts.YouSumback.model.entity.Question;
+import com.kdt.yts.YouSumback.model.entity.Quiz;
+import com.kdt.yts.YouSumback.model.entity.Summary;
+import com.kdt.yts.YouSumback.model.entity.Tag;
+import com.kdt.yts.YouSumback.model.entity.UserLibrary;
+import com.kdt.yts.YouSumback.model.entity.UserLibraryTag;
+import com.kdt.yts.YouSumback.model.entity.UserLibraryTagId;
+import com.kdt.yts.YouSumback.repository.AnswerOptionRepository;
+import com.kdt.yts.YouSumback.repository.AudioTranscriptRepository;
+import com.kdt.yts.YouSumback.repository.QuizRepository;
+import com.kdt.yts.YouSumback.repository.SummaryRepository;
+import com.kdt.yts.YouSumback.repository.TagRepository;
+import com.kdt.yts.YouSumback.repository.UserLibraryRepository;
+import com.kdt.yts.YouSumback.repository.UserLibraryTagRepository;
+import com.kdt.yts.YouSumback.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.ai.chat.client.ChatClient;
-import org.springframework.ai.openai.OpenAiChatModel;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -27,17 +41,20 @@ public class SummaryServiceImpl implements SummaryService {
     private final UserRepository userRepository;
     private final AudioTranscriptRepository audioTranscriptRepository;
     private final SummaryRepository summaryRepository;
+    private final QuizRepository quizRepository;
 
-    // ChatClient.Builder를 주입받아 ChatClient 생성
     @Autowired
-    public SummaryServiceImpl(ChatClient.Builder chatClientBuilder,
-                              AnswerOptionRepository answerOptionRepository,
-                              TagRepository tagRepository,
-                              UserLibraryRepository userLibraryRepository,
-                              UserLibraryTagRepository userLibraryTagRepository,
-                              UserRepository userRepository,
-                              AudioTranscriptRepository audioTranscriptRepository,
-                              SummaryRepository summaryRepository) {
+    public SummaryServiceImpl(
+            ChatClient.Builder chatClientBuilder,
+            AnswerOptionRepository answerOptionRepository,
+            TagRepository tagRepository,
+            UserLibraryRepository userLibraryRepository,
+            UserLibraryTagRepository userLibraryTagRepository,
+            UserRepository userRepository,
+            AudioTranscriptRepository audioTranscriptRepository,
+            SummaryRepository summaryRepository,
+            QuizRepository quizRepository
+    ) {
         this.chatClient = chatClientBuilder.build();
         this.answerOptionRepository = answerOptionRepository;
         this.tagRepository = tagRepository;
@@ -46,13 +63,14 @@ public class SummaryServiceImpl implements SummaryService {
         this.userRepository = userRepository;
         this.audioTranscriptRepository = audioTranscriptRepository;
         this.summaryRepository = summaryRepository;
+        this.quizRepository = quizRepository;
     }
 
     @Override
     public SummaryResponse summarize(SummaryRequest request) {
         String text = request.getText();
-        Long transcriptId = request.getTranscriptId();
-        Long userId = request.getUserId();
+        Integer transcriptId = request.getTranscriptId();  // 이미 Integer
+        Integer userId      = request.getUserId();
 
         // 1. 요약 생성
         List<String> chunks = splitTextIntoChunks(text, 1000);
@@ -61,6 +79,11 @@ public class SummaryServiceImpl implements SummaryService {
             partialSummaries.add(callOpenAISummary(chunk));
         }
         String finalSummary = callOpenAISummary(String.join("\n", partialSummaries));
+
+        boolean userExists         = userRepository.existsById(userId);
+        boolean transcriptExists   = audioTranscriptRepository.existsById(transcriptId);
+        System.out.println("▶ userExists("+userId+")?        = " + userExists);
+        System.out.println("▶ transcriptExists("+transcriptId+")? = " + transcriptExists);
 
         // 2. Summary 저장
         Summary summary = Summary.builder()
@@ -71,15 +94,28 @@ public class SummaryServiceImpl implements SummaryService {
                 .summaryType("default")
                 .createdAt(LocalDateTime.now())
                 .build();
-        Summary saved = summaryRepository.save(summary);
 
-        // 3. 라이브러리 찾기
+        Summary savedSummary = summaryRepository.save(summary);
+        Integer summaryId = savedSummary.getSummaryId();
+
+        // 3. UserLibrary 조회 또는 생성
         UserLibrary library = userLibraryRepository
-                .findBySummaryUserUserIdAndSummaryAudioTranscriptTranscriptId(userId, transcriptId)
-                .orElseThrow(() -> new RuntimeException("라이브러리 항목 없음"));
+                .findByUserUserIdAndSummarySummaryId(userId, summaryId)
+                .orElseGet(() -> {
+                    UserLibrary newLibrary = UserLibrary.builder()
+                            .user(userRepository.findById(userId).orElseThrow()) // userId 역시 Integer로 찾아야 합니다
+                            .summary(savedSummary)
+                            .savedAt(LocalDateTime.now())
+                            .build();
+                    return userLibraryRepository.save(newLibrary);
+                });
+        System.out.println("▶ userExists(" + userId + ")? = " + userExists);
+        System.out.println("▶ transcriptExists(" + transcriptId + ")? = " + transcriptExists);
+        System.out.println("▶ Creating new UserLibrary for user=" + userId + ", summary=" + summaryId);
+
 
         // 4. 해시태그 추출 및 저장
-        List<String> hashtags = extractHashtags(finalSummary, 3);
+        List<String> hashtags = extractHashtagsWithGPT(finalSummary, 3);
         for (String keyword : hashtags) {
             Tag tag = tagRepository.findByTagName(keyword)
                     .orElseGet(() -> tagRepository.save(Tag.builder().tagName(keyword).build()));
@@ -98,67 +134,182 @@ public class SummaryServiceImpl implements SummaryService {
             }
         }
 
-        return new SummaryResponse(saved.getSummaryId(), finalSummary);
+        return new SummaryResponse(savedSummary.getSummaryId(), finalSummary);
     }
 
     @Override
+    @Transactional
     public List<Quiz> generateFromSummary(QuizRequest request) {
-        String prompt = "다음 내용을 바탕으로 객관식 퀴즈를 " + request.getNumberOfQuestions() + "개 만들어줘.\n"
-                + "문제 형식은 다음과 같아:\n"
-                + "Q: ...\n1. ...\n2. ...\n3. ...\n4. ...\n정답: ...\n\n"
-                + request.getSummaryText();
+        // 1) Summary 엔티티 조회
+        Summary summary = summaryRepository.findById(request.getSummaryId())
+                .orElseThrow(() -> new RuntimeException("Summary not found"));
 
-        String aiResponse = callOpenAISummary(prompt);
-        String[] quizBlocks = aiResponse.split("(?=Q:)");
-        List<Quiz> quizzes = new ArrayList<>();
+        // 2) 퀴즈용 프롬프트 생성
+        String prompt = String.format("""
+        아래 요약문을 바탕으로 객관식 퀴즈를 %d개 만들어줘.
+        반드시 아래 형식만 지켜서 출력해줘. 불필요한 설명은 쓰지 마.
 
-        for (String block : quizBlocks) {
-            try {
-                String[] lines = block.strip().split("\n");
-                if (lines.length < 6) continue;
+        Q: 인공지능이 최근 발전한 분야는 무엇인가요?
+        1. 자연어 처리
+        2. 농업 기술
+        3. 고전 문학
+        4. 스포츠 분석
+        정답: 1
 
-                String questionText = lines[0].replace("Q:", "").trim();
-                List<AnswerOption> options = new ArrayList<>();
-                for (int i = 1; i <= 4; i++) {
-                    options.add(AnswerOption.builder()
-                            .optionText(lines[i].substring(2).trim())
-                            .isCorrect(false)
-                            .build());
-                }
+        Q: 인공지능의 발전으로 등장한 서비스가 아닌 것은?
+        1. 챗봇
+        2. 기계 번역
+        3. 음성 인식
+        4. 손글씨 연습장
+        정답: 4
 
-                int answerNum = Integer.parseInt(lines[5].replaceAll("[^0-9]", ""));
-                options.get(answerNum - 1).setIsCorrect(true);
+        [요약문 시작]
+        %s
+        [요약문 끝]
+        """, request.getNumberOfQuestions(), summary.getSummaryText());
 
-                Question question = Question.builder()
-                        .questionText(questionText)
-                        .options(options)
-                        .build();
+        // 3) 실제 AI 호출
+        System.out.println(">>>> Sending Quiz Prompt to AI:\n" + prompt);
+        String aiResponseQuiz = chatClient.prompt()
+                .user(prompt)
+                .call()
+                .content();
+        System.out.println(">>>> AI Quiz Response:\n" + aiResponseQuiz);
 
-                Quiz quiz = Quiz.builder()
-                        .summary(Summary.builder().summaryId(request.getSummaryId()).build())
-                        .questions(List.of(question))
-                        .createdAt(LocalDateTime.now())
-                        .build();
-
-                quizzes.add(quiz);
-
-            } catch (Exception e) {
-                System.out.println("⚠️ 퀴즈 파싱 실패: " + block);
-                e.printStackTrace();
+        // 4) “Q:”가 시작되는 부분을 기준으로 분리 (Q:를 블록에 그대로 남김)
+        String[] rawBlocks = aiResponseQuiz.split("(?m)(?=Q:)");
+        List<String> quizBlocks = new ArrayList<>();
+        for (String b : rawBlocks) {
+            String trimmed = b.strip();
+            if (!trimmed.isEmpty()) {
+                quizBlocks.add(trimmed);
             }
         }
 
-        return quizzes;
+        // 5) Quiz 엔티티 초기화
+        Quiz quiz = Quiz.builder()
+                .summary(summary)
+                .title("AI 자동 생성 퀴즈")
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        // 6) 블록별로 Question + AnswerOption 생성
+        for (String block : quizBlocks) {
+            try {
+                // “Q:”부터 시작하므로, 첫 줄에서 질문을 꺼낸다.
+                String[] lines = block.split("\\r?\\n");
+                if (lines.length < 2) {
+                    System.out.println("⚠️ 블록 라인 부족: " + block);
+                    continue;
+                }
+
+                // 6-1) 질문 추출: 첫 번째 줄에서 “Q:” 이후 부분
+                String firstLine = lines[0].trim();
+                String questionText;
+                if (firstLine.startsWith("Q:")) {
+                    questionText = firstLine.substring(2).trim();
+                } else {
+                    System.out.println("⚠️ 질문 포맷 불일치: " + firstLine);
+                    continue;
+                }
+
+                // 6-2) 보기와 정답 추출 준비
+                List<AnswerOption> options = new ArrayList<>();
+                int answerNum = -1;
+
+                // 6-3) 두 번째 줄부터 마지막 줄까지 순회
+                for (int i = 1; i < lines.length; i++) {
+                    String line = lines[i].trim();
+                    if (line.isEmpty()) {
+                        continue;
+                    }
+
+                    // 보기가 “숫자. 텍스트” 형태인지 확인
+                    if (line.matches("^[0-9]+\\.\\s+.*")) {
+                        // “1. 자연어 처리” → “자연어 처리”
+                        String optText = line.replaceFirst("^[0-9]+\\.\\s*", "");
+                        AnswerOption opt = AnswerOption.builder()
+                                .optionText(optText)
+                                .isCorrect(false)
+                                .build();
+                        options.add(opt);
+                    }
+                    // 정답이 “정답: 숫자” 형태인지 확인
+                    else if (line.startsWith("정답")) {
+                        String digits = line.replaceAll("[^0-9]", "");
+                        if (!digits.isEmpty()) {
+                            answerNum = Integer.parseInt(digits);
+                        }
+                    }
+                    // 그 외 라인은 무시
+                }
+
+                // 6-4) 유효성 검사: 질문, 보기 4개, 정답(1~4)
+                if (questionText.isBlank()) {
+                    System.out.println("⚠️ 질문이 비어 있음: " + block);
+                    continue;
+                }
+                if (options.size() != 4) {
+                    System.out.println("⚠️ 보기 개수 불일치(4개 아님): size=" + options.size() + " → " + block);
+                    continue;
+                }
+                if (answerNum < 1 || answerNum > 4) {
+                    System.out.println("⚠️ 정답 번호 범위 외: " + answerNum + " → " + block);
+                    continue;
+                }
+
+                // 6-5) 정답 표시
+                options.get(answerNum - 1).setIsCorrect(true);
+
+                // 6-6) Question 엔티티 생성 및 연관 관계 설정
+                Question question = Question.builder()
+                        .questionText(questionText)
+                        .languageCode("ko")
+                        .build();
+                question.setQuiz(quiz);
+
+                for (AnswerOption opt : options) {
+                    opt.setQuestion(question);
+                }
+                question.setOptions(options);
+
+                // 6-7) Quiz.questions 목록에 추가
+                quiz.getQuestions().add(question);
+
+            } catch (Exception ex) {
+                System.out.println("❌ 파싱 예외 발생 블록:\n" + block);
+                ex.printStackTrace();
+            }
+        }
+
+        // 7) 저장 (cascade = ALL 덕분에 Question/AnswerOption 전체가 함께 INSERT)
+        try {
+            Quiz savedQuiz = quizRepository.save(quiz);
+            System.out.println("✅ Saved Quiz id = " + savedQuiz.getQuizId());
+            return List.of(savedQuiz);
+        } catch (Exception saveEx) {
+            System.out.println("❌ Quiz 저장 중 예외:");
+            saveEx.printStackTrace();
+            throw saveEx;
+        }
     }
+
+
+
+
 
     @Override
     public String callOpenAISummary(String text) {
+        // 기존 요약용 AI 호출
         return chatClient.prompt()
                 .user("다음 내용을 바탕으로 요약해줘:\n" + text)
                 .call()
                 .content();
     }
 
+    /**
+     * 긴 텍스트를 지정된 크기(chunkSize)로 분할하는 헬퍼 메서드
+     */
     private List<String> splitTextIntoChunks(String text, int chunkSize) {
         List<String> chunks = new ArrayList<>();
         int length = text.length();
@@ -169,25 +320,24 @@ public class SummaryServiceImpl implements SummaryService {
         return chunks;
     }
 
-    private List<String> extractHashtags(String text, int limit) {
-        Map<String, Integer> freq = new HashMap<>();
-        String[] words = text.toLowerCase().split("\\W+");
+    /**
+     * 텍스트에서 빈도 높은 단어를 추출해 해시태그로 사용할 키워드 리스트를 반환하는 헬퍼 메서드
+     */
+    public List<String> extractHashtagsWithGPT(String text, int limit) {
+        String prompt = String.format("다음 텍스트에서 주요 키워드를 추출하여 #%s개 태그 형식으로 반환해줘: %s", limit, text);
 
-        for (String word : words) {
-            if (word.length() >= 2 && !isStopword(word)) {
-                freq.put(word, freq.getOrDefault(word, 0) + 1);
-            }
-        }
+        String response = chatClient.prompt()
+                .user(prompt)
+                .call()
+                .content();
 
-        return freq.entrySet().stream()
-                .sorted((a, b) -> b.getValue() - a.getValue())
+        // GPT 응답을 파싱하여 해시태그 리스트로 반환
+        return List.of(response.split("\\s+#")).stream()
+                .map(tag -> tag.replace("#", "").trim())
+                .filter(tag -> !tag.isEmpty())
                 .limit(limit)
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private boolean isStopword(String word) {
-        return List.of("그리고", "하지만", "또한", "이", "그", "저", "있는", "한다", "였다", "하는", "되어", "으로")
-                .contains(word);
-    }
+
 }
